--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,6 +21,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#0D47A1",
+  "theme_color": "#00128A",
   "background_color": "#ffffff"
 }
