--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "firebase": "^12.4.0",
     "pdfmake": "^0.2.20",
     "react": "^19.2.0",
